adjusted gap in donation, fix resources responsiveness

--- a/css/donation.css
+++ b/css/donation.css
@@ -140,6 +140,10 @@ body {
     margin-bottom: 10px;
 }
 
+.donation-section {
+    margin: 5% 0;
+}
+
 .footer-div {
     box-sizing: border-box;
     margin: 0;
