--- a/css/resources.css
+++ b/css/resources.css
@@ -361,6 +361,8 @@ body {
         font-size: 18px;
         text-align: center;
     }
+
+    
 }
 
 @media screen and (max-width: 768px) {
@@ -375,6 +377,11 @@ body {
     .p-description-right, .p-description-left {
         font-size: 16px;
     }
+    .grid-container {
+        display: flex;
+        flex-direction: column;
+    }
+    
 }
 
 @media screen and (max-width: 480px) {
